tests/ui-venial/ser-enum-data.stderr
error: Invalid variant: only simple enum variants without fields are supported
 --> tests/ui-venial/ser-enum-data.rs:5:5
  |
5 |     Variant(i32),
  |     ^^^^^^^^^^^^
